Tooltips: finally fully fleshed out hover trigger to prevent flickering when moving from tooltip to target; added arrow animation; TODO: implement default target selector and fix balloon animations going the same way all the time in auto-orientation mode

--- a/shuffledeck/src/shuffledeck.scss
+++ b/shuffledeck/src/shuffledeck.scss
@@ -84,26 +84,52 @@ x-shuffledeck{
         // rotation animations
         //////////////////////
         &[slide-anim-type=flipX]{
-            // initial positions for animation
-            &#{$newStartingSelector}{
-                @include transformed(rotateX(180deg));
+            &:not([reverse]){
+                // initial positions for animation
+                &#{$newStartingSelector}{
+                    @include transformed(rotateX(180deg));
+                }
+                
+                // target positions for animation
+                &#{$oldEndingSelector}{
+                    @include transformed(rotateX(-180deg));
+                }
             }
-            
-            // target positions for animation
-            &#{$oldEndingSelector}{
-                @include transformed(rotateX(-180deg));
+            &[reverse]{
+                // initial positions for animation
+                &#{$newStartingSelector}{
+                    @include transformed(rotateX(-180deg));
+                }
+                
+                // target positions for animation
+                &#{$oldEndingSelector}{
+                    @include transformed(rotateX(180deg));
+                }
             }
         }
         
         &[slide-anim-type=flipY]{
-            // initial positions for animation
-            &#{$newStartingSelector}{
-                @include transformed(rotateY(180deg));
+            &:not([reverse]){
+                // initial positions for animation
+                &#{$newStartingSelector}{
+                    @include transformed(rotateY(180deg));
+                }
+                
+                // target positions for animation
+                &#{$oldEndingSelector}{
+                    @include transformed(rotateY(-180deg));
+                }
             }
-            
-            // target positions for animation
-            &#{$oldEndingSelector}{
-                @include transformed(rotateY(-180deg));
+            &[reverse]{
+                // initial positions for animation
+                &#{$newStartingSelector}{
+                    @include transformed(rotateY(-180deg));
+                }
+                
+                // target positions for animation
+                &#{$oldEndingSelector}{
+                    @include transformed(rotateY(180deg));
+                }
             }
         }
         
