--- a/tooltip/src/tooltip.scss
+++ b/tooltip/src/tooltip.scss
@@ -83,6 +83,7 @@ x-tooltip > .tooltip-arrow{
         top: 100%; // default positions to be overridden later
         left: 50%;
         
+        @include animated(left, 0.2s);
         @include transformed(translateY(-45%) rotate(45deg));
         border-top-width: 0px !important;
         border-left-width: 0px !important;
@@ -92,6 +93,7 @@ x-tooltip > .tooltip-arrow{
         bottom: 100%;
         left: 50%;
         
+        @include animated(left, 0.2s);
         @include transformed(translateY(45%) rotate(45deg));
         border-bottom-width: 0px !important;
         border-right-width: 0px !important;
@@ -101,6 +103,7 @@ x-tooltip > .tooltip-arrow{
         right: 100%;
         top: 50%;
         
+        @include animated(top, 0.2s);
         @include transformed(translateX(45%) rotate(45deg));
         border-top-width: 0px !important;
         border-right-width: 0px !important;
@@ -110,6 +113,7 @@ x-tooltip > .tooltip-arrow{
         left: 100%;
         top: 50%;
         
+        @include animated(top, 0.2s);
         @include transformed(translateX(-45%) rotate(45deg));
         border-bottom-width: 0px !important;
         border-left-width: 0px !important;
